# EGLDemo

app/: build.gradle
app/src/androidTest/java/com/example/egldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/common/: result.h
app/src/main/cpp/egl/: EglHelper.cpp  EglHelper.h  EglThread.cpp  EglThread.h
app/src/main/cpp/log/: GLLog.h
app/src/main/java/com/example/egldemo/: MainActivity.java
app/src/main/java/com/example/egldemo/opengl/: NativeGLSurfaceView.java  NativeOpenGL.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/egldemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
